# face-detection-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: dataset-policy.md  evaluation-workflows.md  rfdetr-training.md  roboflow-workflows.md
notebooks/: RF_DETR_face_det.ipynb  insightface_workflow.ipynb  rfdetr_training_workflow.ipynb  rfdetr_workflow.ipynb
src/face_detection_benchmark/: __init__.py  charts.py  cli.py  coco.py  config.py  datasets.py  env.py  evaluation.py  evaluation_metrics.py  evaluation_types.py  inference.py  predictions.py  report_tables.py  reports.py  rfdetr_benchmark_prediction.py  rfdetr_frame_prediction.py  threshold_validation.py  video.py
src/face_detection_benchmark/commands/: __init__.py  common.py  datasets.py  egoblur.py  evaluation.py  insightface.py  rfdetr.py  video.py
src/face_detection_benchmark/evaluation/: __init__.py  metrics.py  thresholds.py  types.py
src/face_detection_benchmark/inference/: __init__.py  egoblur_benchmark.py  images.py  insightface_benchmark.py  rfdetr_benchmark.py  rfdetr_frames.py
src/face_detection_benchmark/models/: __init__.py  egoblur.py  insightface.py  rfdetr.py
src/face_detection_benchmark/reports/: __init__.py  charts.py  comparison.py  overlays.py  tables.py  video_summaries.py
src/rfdetr_faces/: cli.py  coco.py  config.py  inference.py  video.py
tests/: __init__.py  fixtures.py  test_evaluation.py  test_evaluation_metrics.py  test_evaluation_workflows.py  test_inference_helpers.py  test_prediction_overlays.py  test_reports.py  test_threshold_validation.py
(+6 files in other folders)
