[project]
name = "face-detection-benchmark"
version = "0.1.0"
description = "Local tooling for building and evaluating target-domain face detection benchmarks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "jupyter",
    "numpy",
    "opencv-python",
    "pillow",
    "pydantic-settings",
    "rfdetr",
    "rich",
    "roboflow",
    "supervision",
    "tqdm",
    "typer",
]

[project.optional-dependencies]
egoblur = [
    "egoblur",
]
insightface = [
    "insightface",
    "onnxruntime",
]

[project.scripts]
face-benchmark = "face_detection_benchmark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_detection_benchmark"]
